--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -6,6 +6,16 @@
           Welcome Back 👋
         </h2>
       </div>
+      @if(errorMessage) {
+        <div class="bg-red-100 border-2 border-red-400  px-2.5 sm:px-3 py-1.5 sm:py-2 rounded-lg relative" role="alert">
+          <span class="block sm:inline text-red-800 font-sans text-sm sm:text-base font-semibold">{{ errorMessage }}</span>
+          <span class="absolute top-0 bottom-0 right-0 px-2.5 sm:px-3 py-1.5 sm:py-2" (click)="clearMessage()"  role="button">
+            <svg class="fill-current h-6 w-6 text-red-800" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+              <path d="M14.348 14.849a1.2 1.2 0 0 1-1.697 0L10 11.819l-2.651 3.029a1.2 1.2 0 1 1-1.697-1.697l2.758-3.15-2.759-3.152a1.2 1.2 0 1 1 1.697-1.697L10 8.183l2.651-3.031a1.2 1.2 0 1 1 1.697 1.697l-2.758 3.152 2.758 3.15a1.2 1.2 0 0 1 0 1.698z"/>
+            </svg>
+          </span>
+        </div>
+      } 
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Email
@@ -19,6 +29,13 @@
           required
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
         >
+        @if(loginForm.controls['email'].invalid && loginForm.controls['email'].touched){
+          @if(loginForm.controls['email'].hasError('required')){
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Email is required</span>            
+          } @else if(loginForm.controls['email'].hasError('email')){
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Invalid email format</span>
+          }
+        }
       </div>
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -31,13 +48,25 @@
           formControlName="password"
           placeholder="password123"
           required
+          minlength="10"
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
         >
+        @if(loginForm.controls['password'].invalid && loginForm.controls['password'].touched){
+          @if(loginForm.controls['password'].hasError('required')){
+            <span class="text-red-600 ml-2 text-sm sm:text-base">Password is required</span>            
+          } @else if (loginForm.controls['password'].hasError('minlength')) {
+            <span class="text-red-600 ml-2 text-sm sm:text-base">Password must be at least 10 characters</span>
+          }
+        }
       </div>
-      <div class="flex justify-end mt-6">
+      <div class="flex justify-center mt-6">
         <button type="submit" [disabled]="!loginForm.valid" disabled class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
-          Login
-        </button>  
+          @if(isLoading){
+            <app-loading-button></app-loading-button>
+          } @else {
+            Login
+          }
+        </button>
       </div>
       <div class="flex justify-center mt-6">
         <p class="text-sm sm:text-base font-medium font-sans text-gray-800">
