--- a/src/app/pages/page-login/page-login.component.html
+++ b/src/app/pages/page-login/page-login.component.html
@@ -1,13 +1,21 @@
 <div class="flex items-center justify-center min-h-screen bg-gradient-to-tr from-pink-50 to-blue-200">
   <div class="relative px-4 py-5 mx-auto w-full sm:min-w-xl md:max-w-screen-md lg:max-w-screen-sm md:px-24 lg:px-8 lg:py-10">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <form 
+      [formGroup]="loginForm" 
+      (ngSubmit)="onSubmit()" 
+      class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100"
+    >
       <div class="flex flex-col items-center justify-center max-w-xl my-4 sm:my-6">
         <h2 class="mb-4 sm:mb-6 font-sans text-2xl font-bold leading-none tracking-tight text-gray-800 sm:text-3xl md:text-4xl md:mx-auto">
           Welcome Back 👋
         </h2>
       </div>
       @if(errorMessage) {
-        <app-alert-error [errorMessage]="errorMessage" (clearMessage)="clearMessage()"></app-alert-error>
+        <app-alert-error 
+          [errorMessage]="errorMessage" 
+          (clearMessage)="clearMessage()"
+        >
+        </app-alert-error>
       } 
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -39,16 +47,19 @@
           id="password" 
           name="password"
           formControlName="password"
-          placeholder="password123"
+          placeholder="Password1"
           required
-          minlength="10"
+          minlength="12"
+          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
         >
         @if(loginForm.controls['password'].invalid && loginForm.controls['password'].touched){
           @if(loginForm.controls['password'].hasError('required')){
             <span class="text-red-600 ml-2 text-sm sm:text-base">Password is required</span>            
           } @else if (loginForm.controls['password'].hasError('minlength')) {
-            <span class="text-red-600 ml-2 text-sm sm:text-base">Password must be at least 10 characters</span>
+            <span class="text-red-600 ml-2 text-sm sm:text-base">Password must be at least 12 characters</span>
+          } @else if (loginForm.controls['password'].hasError('pattern')) {
+            <span class="text-red-600 ml-2 text-sm sm:text-base">Password must contain at least have number, uppercase and lowercase letter</span>
           }
         }
       </div>
