--- a/src/app/pages/page-register/page-register.component.html
+++ b/src/app/pages/page-register/page-register.component.html
@@ -1,20 +1,47 @@
 <div class="flex items-center justify-center min-h-screen bg-gradient-to-tr from-pink-50 to-blue-200">
   <div class="relative px-4 py-5 mx-auto w-full sm:min-w-xl md:max-w-screen-md lg:max-w-screen-sm md:px-24 lg:px-8 lg:py-10">
-    <div class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100">
+    <form 
+      [formGroup]="registerForm" 
+      (ngSubmit)="onSubmit()" 
+      class="bg-gradient-to-tr from-pink-50 to-blue-200 rounded-2xl py-4 px-5 sm:py-8 sm:px-10 border-2 border-gray-100"
+    >
       <div class="flex flex-col items-center justify-center max-w-xl my-4 sm:my-6">
         <h2 class="mb-4 sm:mb-6 font-sans text-2xl font-bold leading-none tracking-tight text-gray-800 sm:text-3xl md:text-4xl md:mx-auto">
           Let's Get Started 🚀
         </h2>
       </div>
+      @if(errorMessage) {
+        <app-alert-error 
+          [errorMessage]="errorMessage" 
+          (clearMessage)="clearMessage()"
+          >
+        </app-alert-error>
+      }
+      @if(successMessage) {
+        <app-alert-success 
+          [errorMessage]="successMessage" 
+          (clearMessage)="clearMessage()"
+          >
+        </app-alert-success>
+      }
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="name" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Name
         </label>
-        <input 
+        <input
           type="text" 
-          id="name" 
+          id="name"
+          name="name"
+          formControlName="name"
+          placeholder="Your Name"
+          required
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
         >
+        @if(registerForm.controls['name'].invalid && registerForm.controls['name'].touched){
+          @if(registerForm.controls['name'].hasError('required')){
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Name is required</span>
+          }
+        }
       </div>
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="email" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -22,9 +49,20 @@
         </label>
         <input 
           type="email" 
-          id="email" 
+          id="email"
+          name="email"
+          formControlName="email"
+          placeholder="email@example.com"
+          required
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none focus:border-gray-300"
         >
+        @if(registerForm.controls['email'].invalid && registerForm.controls['email'].touched){
+          @if(registerForm.controls['email'].hasError('required')){
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Email is required</span>            
+          } @else if(registerForm.controls['email'].hasError('email')){
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Invalid email format</span>
+          }
+        }
       </div>
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
@@ -32,23 +70,59 @@
         </label>
         <input 
           type="password" 
-          id="password" 
+          id="password"
+          name="password"
+          formControlName="password"
+          placeholder="Password1"
+          required
+          minlength="12"
+          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
         >
+        @if(registerForm.controls['password'].invalid && registerForm.controls['password'].touched){
+          @if(registerForm.controls['password'].hasError('required')){
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Password is required</span>
+          } @else if (registerForm.controls['password'].hasError('minlength')) {
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Password must be at least 12 characters</span>
+          } @else if (registerForm.controls['password'].hasError('pattern')) {
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Password must contain at least one number, one uppercase and one lowercase letter</span>
+          }
+        }
       </div>
       <div class="mt-3 sm:mt-4 space-y-1 sm:space-y-2">
         <label for="confirm-password" class="font-medium font-sans text-sm sm:text-base text-gray-800">
           Confirm Password
         </label>
-        <input 
+        <input
           type="password" 
-          id="confirm-password" 
+          id="confirm-password"
+          name="confirm-password"
+          formControlName="confirmPassword"
+          placeholder="Password1"
+          required
+          minlength="12"
+          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{12,}"
           class="w-full px-2.5 sm:px-3 py-1.5 sm:py-2 border-2 font-sans text-sm sm:text-base border-gray-200 rounded-xl focus:outline-none  focus:border-gray-300"
         >
+        @if(registerForm.controls['confirmPassword'].invalid && registerForm.controls['confirmPassword'].touched){
+          @if(registerForm.controls['confirmPassword'].hasError('required')){
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Confirm Password is required</span>
+          } @else if (registerForm.controls['confirmPassword'].hasError('minlength')) {
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Confirm Password must be at least 12 characters</span>
+          } @else if (registerForm.controls['confirmPassword'].hasError('pattern')) {
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Confirm Password must contain at least one number, one uppercase and one lowercase letter</span>
+          } @else if (registerForm.controls['confirmPassword'].hasError('mismatch')) {
+            <span class="text-red-600 ml-1 text-sm sm:text-base">Passwords do not match</span>
+          }
+        }
       </div>
       <div class="flex justify-end mt-6">
         <button type="submit" class="bg-gray-800 text-white text-sm sm:text-base rounded-xl w-full py-2 md:py-2.5 font-medium font-sans hover:bg-gray-900 hover:text-gray-100">
-          Register
+          @if(isLoading){
+            <app-loading-button></app-loading-button>
+          } @else {
+            Register
+          }
         </button>  
       </div>
       <div class="flex justify-center mt-6">
@@ -58,7 +132,7 @@
             Login
           </a>
         </p>
-    </div>
-    </div>
+      </div>
+    </form>
   </div>
 </div>
